[project]
name = "voice2txt"
version = "0.1.0"
description = "A utility to record and transcribe audio to text."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "sounddevice",
    "soundfile",
    "numpy"
]

[project.optional-dependencies]
macos = [
    "mlx-whisper"
]
all-platforms = [
    "openai-whisper"
]